--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="row">
 
-      <div type="button" id="gollum" class="btn yellow">
+      <div type="button" id="legolas" class="btn yellow">
 
       </div>
       <div type="button" id="galadriel" class="btn blue">
